Fix the blockquote spacing

--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -38,9 +38,7 @@ pre
 blockquote
   font-size: $b-fontSize-xl
   font-weight: $f-base-light-fontWeight
-  margin-bottom: 0
-  margin-left: 0
-  margin-top: 0
+  margin: 0
 
 // ----- Headers ----- //
 
